Issue #2980199 by Jyotish: Add a border  to color boxes display, not visible the white/light colors

--- a/css/color_field_widget_box.css
+++ b/css/color_field_widget_box.css
@@ -1,9 +1,9 @@
 .color_field_widget_box__square {
-  border: 1px solid #ffffff;
+  border: 1px solid #000;
+  box-shadow: 0 0 1px #000;
   height: 16px;
   margin: 2px;
   width: 16px;
-  box-shadow: 0 0 1px #000;
 }
 
 .color_field_widget_box__square.active,
@@ -15,6 +15,8 @@
 .color_field_widget_box__square--transparent {
   background-image: url("../images/transparent_box16.gif");
   background-repeat: no-repeat;
+  border: 1px solid #000;
+  box-shadow: 0 0 1px #000;
   height: 16px;
   margin: 2px;
   width: 16px;
